--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  
-  "homepage": "https://sarawoldeyohannes.github.io/westerlies-v-2",
-  
+  "homepage": "/westerlies-v-2/",
   "name": "westerlies-v-2",
   
   "private": true,
