--- a/package.json
+++ b/package.json
@@ -1,106 +1,42 @@
 {
   "homepage": "/westerlies-v-2/",
   "name": "westerlies-v-2",
-  
   "private": true,
-  
   "version": "0.0.0",
-  
   "type": "module",
-  
   "scripts": {
-  
-    
-  "dev": "vite",
-  
-    
-  "build": "tsc && vite build",
-  
-    
-  "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-  
-    
-  "preview": "vite preview",
-  
-    
-  "deploy": "npm run build && npx gh-pages -d dist"
-  
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "deploy": "npm run build && npx gh-pages -d dist"
   },
-  
   "dependencies": {
-  
-    
-  "@fortawesome/fontawesome-svg-core": "^6.5.2",
-  
-    
-  "@fortawesome/free-brands-svg-icons": "^6.5.2",
-  
-    
-  "@fortawesome/free-regular-svg-icons": "^6.5.2",
-  
-    
-  "@fortawesome/free-solid-svg-icons": "^6.5.2",
-  
-    
-  "@fortawesome/react-fontawesome": "^0.2.2",
-  
-    
-  "@types/react-router-dom": "^5.3.3",
-  
-    
-  "leaflet": "^1.9.4",
-  
-    
-  "react": "^18.2.0",
-  
-    
-  "react-dom": "^18.2.0",
-  
-    
-  "react-icons": "^5.2.1",
-  
-    
-  "react-leaflet": "^4.2.1",
-  
-    
-  "react-router-dom": "^6.23.1"
-  
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.19.3",
+    "@types/react-router-dom": "^5.3.3",
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.23.1"
   },
-  
   "devDependencies": {
-  
-    
-  "@types/react": "^18.2.66",
-  
-    
-  "@types/react-dom": "^18.2.22",
-  
-    
-  "@typescript-eslint/eslint-plugin": "^7.2.0",
-  
-    
-  "@typescript-eslint/parser": "^7.2.0",
-  
-    
-  "@vitejs/plugin-react": "^4.2.1",
-  
-    
-  "eslint": "^8.57.0",
-  
-    
-  "eslint-plugin-react-hooks": "^4.6.0",
-  
-    
-  "eslint-plugin-react-refresh": "^0.4.6",
-  
-    
-  "gh-pages": "^6.1.1",
-  
-    
-  "typescript": "^5.2.2",
-  
-    
-  "vite": "^5.2.0"
-  
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0"
   }
 }
