--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@popperjs/core": "^2.11.8",
     "@react-google-maps/api": "^2.19.3",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
