--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
